--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "typecheck": "tsc",
-    "dev": "tsx watch --clear-screen=false --watch-path=./server ./server/index",
     "build": "remix vite:build",
-    "start": "cross-env NODE_ENV=production node ./server.mjs"
+    "deploy": "npm run build && wrangler pages deploy",
+    "dev": "remix vite:dev",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "start": "wrangler pages dev ./build/client",
+    "typecheck": "tsc",
+    "typegen": "wrangler types",
+    "preview": "npm run build && wrangler pages dev",
+    "cf-typegen": "wrangler types"
   },
   "dependencies": {
     "@faker-js/faker": "^9.0.3",
+    "@remix-run/cloudflare": "^2.12.1",
+    "@remix-run/cloudflare-pages": "^2.12.1",
     "@remix-run/node": "^2.12.1",
     "@remix-run/react": "^2.12.1",
     "@remix-run/serve": "^2.12.1",
@@ -19,7 +25,6 @@
     "@trpc/client": "^11.0.0-rc.553",
     "@trpc/react-query": "^11.0.0-rc.553",
     "@trpc/server": "^11.0.0-rc.553",
-    "express": "^4.21.0",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,8 +33,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.3",
+    "@cloudflare/workers-types": "^4.20241004.0",
     "@remix-run/dev": "^2.12.1",
-    "@types/express": "^5.0.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
@@ -45,7 +50,8 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "^4.2.1",
+    "wrangler": "^3.80.0"
   },
   "engines": {
     "node": ">=20.0.0"
