--- a/biome.json
+++ b/biome.json
@@ -25,8 +25,6 @@
     "useIgnoreFile": true
   },
   "files": {
-    "ignore": [
-      "./worker-configuration.d.ts"
-    ]
+    "ignore": ["**/worker-configuration.d.ts"]
   }
 }
