--- a/apps/frontend/wrangler.toml
+++ b/apps/frontend/wrangler.toml
@@ -1,5 +1,5 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "remix-trpc-fun"
+name = "remix-trpc-fun-frontend"
 compatibility_date = "2024-10-04"
 pages_build_output_dir = "./build/client"
 
@@ -58,9 +58,9 @@ pages_build_output_dir = "./build/client"
 
 # Bind another Worker service. Use this binding to call another Worker without network overhead.
 # Docs: https://developers.cloudflare.com/pages/functions/bindings/#service-bindings
-# [[services]]
-# binding = "MY_SERVICE"
-# service = "my-service"
+[[services]]
+binding = "TRPC_BACKEND"
+service = "remix-trpc-fun-backend"
 
 # To use different bindings for preview and production environments, follow the examples below.
 # When using environment-specific overrides for bindings, ALL bindings must be specified on a per-environment basis.
