--- a/package.json
+++ b/package.json
@@ -14,10 +14,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@biomejs/biome": "1.9.3",
-    "sst": "3.1.67"
-  },
-  "devDependencies": {
-    "@cloudflare/workers-types": "4.20241004.0"
+    "@biomejs/biome": "1.9.3"
   }
 }
