--- a/apps/backend/wrangler.toml
+++ b/apps/backend/wrangler.toml
@@ -1,3 +1,5 @@
 #:schema node_modules/wrangler/config-schema.json
 name = "remix-trpc-fun-backend"
 compatibility_date = "2024-10-04"
+
+main = "./server.ts"
